--- a/index.html
+++ b/index.html
@@ -5,39 +5,30 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="main.css" type="text/css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400&family=JetBrains+Mono:wght@400;600;800&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/0165c272e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
+  <header class="red">
     <a class="menu" href="index.html" alt="about-me">Rólam</a>
   </header>
- 
-  <div class="main-body">
-    <div class="background-image"> 
-    </div>
+  <main class="blue">
+    <div class="image"> </div>
     <article>
-      <h1>Üdvözöllek !
-      </h1>
-      <p> Nuber Péternek hívnak, és jelenleg hivatásos katonatisztként élem a mindennapjaim. A munkahely melett kereskedelmet és marketinget tanulok a Budapesti Corvinus Egyetemen, mivel mindíg szükség van egy B tervre. 
-      <br>
-      <br>
-      Jelenleg az egyetem és a munka mellett szabadidőmben webfejlesztést tanulok a Codeberry-nél, remélem ,hogy később jól össze tudom majd kombinálni az eddigi tanulmányaimmal, képességeimmel. 
-      <br>
-      <br>
-        <strong>Ha szeretnéd segíteni a fejlődésemet, és szeretnél egy ehhez hasonló névjegy weboldalt a vállalkozásodnak, keress bátran, együtt kitalálunk valami szuper megoldást :) </strong>
-      <br>
-      <p id="name">Tisztelettel: Nuber Péter <p>
-      </p>
+           <h1>Üdvözöllek ! </h1>
+      <p>Nuber Péternek hívnak, és jelenleg hivatásos katonatisztként élem a mindennapjaim. A munkahely melett kereskedelem és marketinget tanulok a Budapesti Corvinus Egyetemen, mivel mindíg szükség van egy B tervre. </p>
+      <p>Jelenleg az egyetem és a munka mellett szabadidőmben webfejlesztést tanulok a Codeberry-nél, remélem ,hogy később jól össze tudom majd kombinálni az eddigi tanulmányaimmal, képességeimmel. </p>
+      <p id="strong">Ha szeretnéd segíteni a fejlődésemet, és szeretnél egy ehhez hasonló egyszerű névjegy weboldalt a vállalkozásodnak, keress bátran, együtt kitalálunk valami szuper megoldást :) </p>
+      <p id="name">Tisztelettel: Nuber Péter </p>
     </article>
-  </div>
+  </main>
   <footer class="green">
     <ul>
-      <li><a href="https://www.facebook.com/peter.nuber.3/" target="_blank"> <i class="fab fa-facebook-square fa-2x"></i></a></li>
-      <li><a href="https://www.instagram.com/npeti12/" target="_blank"> <i class="fab fa-instagram-square fa-2x"></i></a></li>
-      <li><a href="https://github.com/npeti12" target="_blank"> <i class="fab fa-github fa-2x"></i></a></li>
+      <li><a href="https://www.facebook.com/peter.nuber.3/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="https://www.instagram.com/npeti12/" target="_blank"><i class="fab fa-instagram-square fa-2x"></i></a></li>
+      <li><a href="https://github.com/npeti12" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
     </ul>
   </footer>
 </body>
