mobil-first-final

--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <script src="https://kit.fontawesome.com/0165c272e6.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="red">
-    <a class="menu" href="index.html" alt="about-me">Rólam</a>
-  </header>
+  <div class="wrapper">
+    <header class="red">
+      <a class="menu" href="index.html" alt="about-me">Rólam</a>
+    </header>
   <main class="blue">
-    <div class="image"> </div>
-    <article>
+    <img src="assets/profilk%C3%A9p1.png" alt="me">
+      <div class="article">
+      <article>
            <h1>Üdvözöllek ! </h1>
-      <p>Nuber Péternek hívnak, és jelenleg hivatásos katonatisztként élem a mindennapjaim. A munkahely melett kereskedelem és marketinget tanulok a Budapesti Corvinus Egyetemen, mivel mindíg szükség van egy B tervre. </p>
-      <p>Jelenleg az egyetem és a munka mellett szabadidőmben webfejlesztést tanulok a Codeberry-nél, remélem ,hogy később jól össze tudom majd kombinálni az eddigi tanulmányaimmal, képességeimmel. </p>
-      <p id="strong">Ha szeretnéd segíteni a fejlődésemet, és szeretnél egy ehhez hasonló egyszerű névjegy weboldalt a vállalkozásodnak, keress bátran, együtt kitalálunk valami szuper megoldást :) </p>
-      <p id="name">Tisztelettel: Nuber Péter </p>
-    </article>
+            <p>Nuber Péternek hívnak, és jelenleg hivatásos katonatisztként élem a mindennapjaim. A munkahely melett kereskedelem és marketinget tanulok a Budapesti Corvinus Egyetemen, mivel mindíg szükség van egy B tervre. </p>
+            <p>Jelenleg az egyetem és a munka mellett szabadidőmben webfejlesztést tanulok a Codeberry-nél, remélem ,hogy később jól össze tudom majd kombinálni az eddigi tanulmányaimmal, képességeimmel. </p>
+            <p id="strong">Ha szeretnéd segíteni a fejlődésemet, és szeretnél egy ehhez hasonló egyszerű névjegy weboldalt a vállalkozásodnak, keress bátran, együtt kitalálunk valami szuper megoldást :) </p>
+            <p id="name">Tisztelettel: Nuber Péter </p>
+        </article> </div>
   </main>
   <footer class="green">
     <ul>
@@ -31,5 +33,6 @@
       <li><a href="https://github.com/npeti12" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
     </ul>
   </footer>
+  </div>
 </body>
 </html>
